[tool.poetry]
name = "csgnn"
version = "0.1.0"
description = ""
authors = ["Anoop K. Chandran <anoopkcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
tqdm = "^4.66.5"
mp-api = "^0.42.1"
torch-geometric = "^2.5.3"
pymatgen = "^2024.9.10"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
