[project]
name = "atlas"
version = "0.1.0"
description = "Atomic Latent Signature"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "pymatgen>=2024.10.3",
    "scikit-learn>=1.5.2",
    "torch>=2.4.1",
    "torch-geometric>=2.6.1",
    "tqdm>=4.66.5",
    "pytorch-lightning>=2.4.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

